# CAGE

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build.lnk
CAGE/: CAGE.cpp  CAGE.h  CAGE.hpp  CMakeLists.txt  Version.hpp.in
CAGE/Audio/: AudioSource.cpp  AudioSource.hpp  Listener.cpp  Listener.hpp  PlaybackEngine.hpp  Sound.cpp  Sound.hpp
CAGE/Core/: Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  Platform.cpp  Platform.hpp  StateMachine.cpp  StateMachine.hpp  Window.cpp  Window.hpp
CAGE/Glad/: glad.c
CAGE/Graphics/Animation/: Animation.cpp  Animation.hpp  Bone.hpp
CAGE/Graphics/Buffers/: Buffer.cpp  Buffer.hpp  FrameBuffer.cpp  FrameBuffer.hpp  IndexBuffer.hpp  VertexBuffer.hpp  VkVertexBuffer.hpp
CAGE/Graphics/Camera/: Camera.cpp  Camera.hpp
CAGE/Graphics/Context/: Context.cpp  Context.hpp  Device.cpp  Device.hpp
CAGE/Graphics/Cubemaps/: Cubemap.cpp  Cubemap.hpp
CAGE/Graphics/Descriptors/: DescriptorManager.cpp  DescriptorManager.hpp
CAGE/Graphics/Font/: Font.cpp  Font.hpp
CAGE/Graphics/Materials/: Material.hpp
CAGE/Graphics/Models/: Mesh.cpp  Mesh.hpp  MeshFactory.cpp  MeshFactory.hpp  Model.hpp  Skybox.hpp  VkMesh.hpp
CAGE/Graphics/Pipeline/: PipelineBuilder.cpp  PipelineBuilder.hpp
CAGE/Graphics/Renderer/: DrawCmd.hpp  Renderer.cpp  Renderer.hpp
CAGE/Graphics/Scene/: Node.cpp  Node.hpp  Scene.cpp  Scene.hpp
CAGE/Graphics/ShaderProgram/: Generic3DShader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SkyboxShader.hpp  SpriteShader.hpp
CAGE/Graphics/Shaders/: Shader.cpp  Shader.hpp  VkShader.cpp  VkShader.hpp
CAGE/Graphics/Textures/: Texture.cpp  Texture.hpp  TextureArray.cpp  TextureArray.hpp  VkTexture.cpp  VkTexture.hpp
CAGE/Graphics/UI/: Button.hpp  CheckBox.cpp  CheckBox.hpp  Clickable.hpp  DebugVisualizer.cpp  DebugVisualizer.hpp  Dragable.hpp  FlowLayout.cpp  FlowLayout.hpp  GridLayout.cpp  GridLayout.hpp  Hoverable.hpp  Layout.cpp  Layout.hpp  LayoutGroup.cpp  LayoutGroup.hpp  ListLayout.cpp  ListLayout.hpp  ScrollField.hpp  ScrollPanel.hpp  Text.cpp  Text.hpp  TextField.hpp  Transforms.cpp  Transforms.hpp  UIElement.cpp  UIElement.hpp
CAGE/Graphics/Uniforms/: Uniforms.cpp  Uniforms.hpp
CAGE/Graphics/Vertex/: Vertex.hpp
CAGE/Graphics/VertexArrays/: VertexArray.hpp
CAGE/Graphics/VertexLayouts/: VertexAttribute.hpp
CAGE/IO/: InputManager.cpp  InputManager.hpp  MeshLoader.cpp  MeshLoader.hpp  VkMeshLoader.cpp  VkMeshLoader.hpp
CAGE/IO/Assets/: AssetManager.hpp  FontManager.hpp  SoundManager.hpp  TextureManager.hpp
CAGE/IO/Events/: ClickEvents.hpp  Event.hpp  EventDispatcher.hpp  EventListener.hpp  KeyEvents.hpp  MouseMotionEvent.hpp  ScrollEvent.hpp  WindowEvents.hpp
CAGE/IO/Localization/: Language.cpp  Language.hpp
CAGE/IO/Logging/: Logger.cpp  Logger.hpp
CAGE/IO/Networking/: ClientConnection.hpp  Connection.hpp  Endpoint.cpp  Endpoint.hpp  Packets.hpp  ServerConnection.hpp
CAGE/Util/: Timer.cpp  Timer.hpp
STR/: CMakeLists.txt  Car.cpp  Car.hpp  Main.cpp  STR.cpp  STR.hpp
STR/Assets/: Thanos.mtl  generic3D.frag  skybox.frag  skybox.vert  sprite.frag
STR/GameStates/: Editor.cpp  Editor.hpp  Lobby.cpp  Lobby.hpp  MainMenu.cpp  MainMenu.hpp  Sandbox.cpp  Sandbox.hpp  UITest.cpp  UITest.hpp
STR/Racers/: Racer.cpp  Shrek.hpp
STR/Track/: Track.hpp
SampleGame/: CMakeLists.txt  Main.cpp  MenuButton.cpp  MenuButton.hpp  Perlin.cpp  STR.cpp  STR.hpp  SampleGame.cpp  SampleGame.hpp  Shrektris.cpp  Shrektris.hpp
SampleGame/AFTR/: AFTR.cpp  AFTR.hpp  ComponentBase.hpp  Cross.cpp  Cross.hpp  Inhibitor.hpp  Network.cpp  Network.hpp  PartShader.hpp  Pipe.cpp  Pipe.hpp  Well.cpp  Well.hpp  World.cpp  World.hpp
SampleGame/Assets/: action_manifest.json  car.mtl  flux inhibitor.mtl  generic3D.frag  shrek-norig.glb  shrek-norig.mtl  shrek.dae  shrek.glb  shrek.ogg.zpa  sprite.frag  sprite.ver
SampleGame/Assets/Models/: protomap.glb  saul_goodman.glb
SampleGame/Assets/Shaders/: generic3D.frag  generic3D.frag.spv  generic3D.vert  generic3D.vert.spv  ui.frag  ui.frag.spv  ui.vert  ui.vert.spv  vktest.frag  vktest.frag.spv  vktest.vert  vktest.vert.spv
SampleGame/Assets/Textures/: icon.data
SampleGame/STR/: Car.cpp  MenuButton.hpp  Perlin.cpp  Perlin.hpp  STR.cpp  STR.hpp
SampleGame/STR/GameStates/: Editor.cpp  Editor.hpp  Lobby.cpp  Lobby.hpp  MainMenu.cpp  MainMenu.hpp  Sandbox.cpp  Sandbox.hpp  UITest.cpp  UITest.hpp
SampleGame/STR/Racers/: Racer.hpp  Shrek.cpp  Vader.hpp
SampleGame/STR/Track/: Track.cpp  Track.hpp
SampleGame/Shrektris/: Client.cpp  Client.hpp  Gameplay.cpp  Gameplay.hpp  Lobby.cpp  Lobby.hpp  Player.hpp  Server.cpp  Server.hpp  ShrekMenu.cpp  ShrekMenu.hpp  Shrektris.cpp  Shrektris.hpp
UB/: Battle.cpp  Battle.hpp  CMakeLists.txt  Character.cpp  Character.hpp  Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  Main.cpp  Player.cpp  Player.hpp  Structure.hpp  UB.cpp  UB.hpp  World.cpp  World.hpp  WorldShader.hpp
UB/Assets/Shaders/: generic3D.frag  world.frag  world.vert
UB/Assets/Textures/: House2.xcf
UB/GameStates/: Editor.cpp  Editor.hpp  Gameplay.cpp  Gameplay.hpp  MainMenu.cpp  MainMenu.hpp
UB/Scripting/: EntMoveAction.cpp  EntMoveAction.hpp  EntTeleportAction.cpp  EntTeleportAction.hpp  ScriptAction.cpp  ScriptAction.hpp  ScriptManager.cpp  ScriptManager.hpp  SoundAction.cpp  SoundAction.hpp  StartAction.cpp  StartAction.hpp  StartBattleAction.cpp  StartBattleAction.hpp
UB/UI/: BattleMenu.cpp  BattleMenu.hpp  DialogueBox.cpp  DialogueBox.hpp  EditorPanel.hpp  EditorTab.hpp  ProgressBar.hpp  RightPanel.hpp  ScriptPanel.cpp  ScriptPanel.hpp  StructurePanel.cpp  StructurePanel.hpp  TilePanel.cpp  TilePanel.hpp
UB/World/: Structure.cpp  Tilemap.cpp  Tilemap.hpp  World.cpp  World.hpp  WorldSerializer.cpp  WorldSerializer.hpp  WorldShader.hpp
V2/: Bullet.cpp  Bullet.hpp  CMakeLists.txt  Editor.cpp  Editor.hpp  Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  GameShader.hpp  Main.cpp  Menu.cpp  Menu.hpp  Player.cpp  Player.hpp  Playfield.cpp  Playfield.hpp  Song.cpp  Song.hpp  V2.cpp  V2.hpp
V2/UI/: MenuButton.hpp  PlaybackBar.hpp  SongWheel.hpp
(+19 files in other folders)
